<resources>
    <string name="app_name">Meme Hooker</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="user_info">Personal Information</string>
    <string name="back2menu">Back to menu</string>
    <string name="confirm">Confirm Checkout</string>
    <string name="cart_title">Cart</string>
    <string name="checkout_title">Checkout</string>
    <string name="change_password">Change Password</string>
    <string name="prompt_password">Password</string>
    <string name="cprompt_password">Confirm Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >8 characters</string>
    <string name="invalid_confirm_password">Password not match</string>
    <string name="invalid_email">Email not valid</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_info">PI</string>
    <string name="long_title_info">Personal</string>
    <string name="title_menu">Menu</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_cart">Cart</string>
    <string name="title_activity_main">App</string>
    <string name="username">Username</string>
    <string name="logout">Logout</string>
    <string name="title_activity_register">Click here to Register</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>