<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.checkout.CheckoutActivity">

    <TextView
        android:id="@+id/checkout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkout_title"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="351dp"
        android:layout_height="437dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/total_price"
            android:layout_width="273dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="50$"
            android:textSize="50sp" />

        <TextView
            android:id="@+id/fullName"
            android:layout_width="273dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="Huy Vo"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/user_email"
            android:layout_width="273dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="tienhuyvonguyen@gmail.com"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/phone"
            android:layout_width="237dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="0909123123"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="351dp"
        android:layout_height="587dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/confirm" />

        <Button
            android:id="@+id/back2menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/back2menu" />

    </LinearLayout>

</LinearLayout>

