<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.info.InfoFragment">

    <TextView
        android:id="@+id/user_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_info"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="351dp"
        android:layout_height="437dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/user_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/ic_launcher_foreground" />

        <TextView
            android:id="@+id/user_name"
            android:layout_width="237dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="valenlucifer"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/user_email"
            android:layout_width="273dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="tienhuyvonguyen@gmail.com"
            android:textSize="20sp" />

<!--        <Button-->
<!--            android:id="@+id/change_password_button"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="center"-->
<!--            android:layout_marginTop="250dp"-->
<!--            android:gravity="center"-->
<!--            android:text="@string/change_password" />-->

<!--        <Button-->
<!--            android:id="@+id/logout_button"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:text="@string/logout" />-->

    </LinearLayout>

    <LinearLayout
        android:layout_width="351dp"
        android:layout_height="587dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/change_password_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/change_password" />

        <Button
            android:id="@+id/logout_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/logout" />

    </LinearLayout>

</LinearLayout>

<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:orientation="vertical">-->

<!--        <Button-->
<!--            android:id="@+id/change_password_button"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="center"-->
<!--            android:layout_marginTop="50dp"-->
<!--            android:gravity="center"-->
<!--            android:text="@string/change_password" />-->

<!--        <Button-->
<!--            android:id="@+id/logout_button"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/logout" />-->

<!--</LinearLayout>-->


<!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--xmlns:tools="http://schemas.android.com/tools"-->
<!--android:layout_width="match_parent"-->
<!--android:layout_height="match_parent"-->
<!--android:orientation="vertical"-->
<!--android:padding="16dp"-->
<!--tools:context=".ui.info.InfoFragment">-->

<!--<LinearLayout-->
<!--    android:layout_width="325dp"-->
<!--    android:layout_height="594dp"-->
<!--    android:layout_marginStart="8dp"-->
<!--    android:layout_marginTop="8dp"-->
<!--    android:layout_marginEnd="8dp"-->
<!--    android:orientation="vertical"-->
<!--    app:layout_constraintBottom_toBottomOf="parent"-->
<!--    app:layout_constraintEnd_toEndOf="parent"-->
<!--    app:layout_constraintStart_toStartOf="parent"-->
<!--    app:layout_constraintTop_toTopOf="parent">-->

<!--    <ImageView-->
<!--        android:id="@+id/user_image"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_gravity="center"-->
<!--        android:layout_marginTop="20dp"-->
<!--        android:layout_marginBottom="20dp"-->
<!--        android:src="@drawable/ic_launcher_background"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

<!--    <TextView-->
<!--        android:id="@+id/user_name"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_gravity="center"-->
<!--        android:text=""-->
<!--        android:textSize="20sp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

<!--    <TextView-->
<!--        android:id="@+id/user_email"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_gravity="center"-->
<!--        android:text=""-->
<!--        android:textSize="20sp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->


<!--    <Button-->
<!--        android:id="@+id/logout_button"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_gravity="center"-->
<!--        android:layout_marginTop="200dp"-->
<!--        android:text="@string/logout"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent" />-->

<!--</LinearLayout>-->
